--- a/10042024/index.html
+++ b/10042024/index.html
@@ -34,7 +34,9 @@
       href="https://live.helsinki.at" target="_blank">Radio Helsinki Livestream</a> hören.</p>
     <p><a href="https://helsinki.at/program/130411" target="_blank">Programmhinweis auf der Radio Helsinki Homepage</a>
     </p>
-    <p>Der Inhalt dieser Sendung wurde noch nicht bekannt gegeben. Bitte noch um ein wenig Geduld... &#128521;</p>
+    <p>Heute feiern wir mit Patrick Hernandez, Kelly Clarkson, Tim Bendzko und Leona Lewis. Die Schauspielerin Emma
+      Watson, die in den Harry-Potter Filmen Hermine Granger gespielt hat, hat am 15. April Geburtstag. Am 14. April
+      hat außerdem der italienische Skirennläufer Dominik Paris Geburtstag.</p>
   </div>
 
   <script src="styles/jquery-3.4.1.slim.min.js"
