--- a/05062024/index.html
+++ b/05062024/index.html
@@ -34,7 +34,10 @@
       href="https://live.helsinki.at" target="_blank">Radio Helsinki Livestream</a> hören.</p>
     <p><a href="https://helsinki.at/program/130413" target="_blank">Programmhinweis auf der Radio Helsinki Homepage</a>
     </p>
-    <p>Der Inhalt dieser Sendung wurde noch nicht bekannt gegeben. Bitte noch um ein wenig Geduld... &#128521;</p>
+    <p>Heute gibt es eine Wiederholung der Sendung vom 07.06.2023.</p>
+    <p>"Heute feiern wir mit Danny Wilde von The Rembrandts, Alexandra Stan, Dennis Lloyd und Lucy Hale. Die
+      österreichische Skirennläuferin Anna Veith hat am 18. Juni Geburtstag. Außerdem war vergangenen Freitag der
+      Nationalfeiertag von Italien."</p>
   </div>
 
   <script src="styles/jquery-3.4.1.slim.min.js"
