--- a/03072024/index.html
+++ b/03072024/index.html
@@ -34,7 +34,7 @@
       href="https://live.helsinki.at" target="_blank">Radio Helsinki Livestream</a> hören.</p>
     <p><a href="https://helsinki.at/program/130414" target="_blank">Programmhinweis auf der Radio Helsinki Homepage</a>
     </p>
-    <p>Heute feiern wir mit Toby Keith, Leah McFall, Debbie Harry von Blondie und Beck. Der österreichische
+    <p>Heute feiern wir mit Gareth Gates, Leah McFall, Debbie Harry von Blondie und Beck. Der österreichische
       Skirennläufer Hannes Reichelt hat am 5. Juli Geburtstag. Außerdem ist heute am 3. Juli der Tag der Erdmännchen.</p>
   </div>
 
