--- a/28082024/index.html
+++ b/28082024/index.html
@@ -34,7 +34,8 @@
       href="https://live.helsinki.at" target="_blank">Radio Helsinki Livestream</a> hören.</p>
     <p><a href="https://helsinki.at/program/130416" target="_blank">Programmhinweis auf der Radio Helsinki Homepage</a>
     </p>
-    <p>Der Inhalt dieser Sendung wurde noch nicht bekannt gegeben. Bitte noch um ein wenig Geduld... &#128521;</p>
+    <p>Heute feiern wir mit Shania Twain, Patrick Nuo, Annalisa und Jendrik. Der amerikanische Schauspieler Dylan
+      O'Brien hatte am 26. August Geburtstag. Außerdem war am 13. August der internationale Linkshänder-Tag.</p>
   </div>
 
   <script src="styles/jquery-3.4.1.slim.min.js"
