--- a/vergangenesendungen/index.html
+++ b/vergangenesendungen/index.html
@@ -30,10 +30,13 @@
         <h1>Happy Birthday Show</h1>
         <div w3-include-html="https://happybirthdayshowhelsinki.github.io/standard.html"></div>
         <h2>Vergangene Sendungen</h2>
+        <p><a href="https://happybirthdayshowhelsinki.github.io/23102024">23.10.2024</a></p>
         <p><a href="https://happybirthdayshowhelsinki.github.io/25092024">25.09.2024</a></p>
         <p><a href="https://happybirthdayshowhelsinki.github.io/28082024">28.08.2024</a></p>
-        <p><a href="https://happybirthdayshowhelsinki.github.io/31072024">31.07.2024</a></p>
         <h3 class="jahr">2024</h3>
+        <p><span class="datum">31.07.2024:</span><br>Mit Geddy Lee, Paloma Faith, Carlos Santana und Alison Krauss<br><a
+            href="https://helsinki.at/program/130415" target="_blank">Programmhinweis auf der Radio Helsinki Homepage</a><br><a
+            href="https://cba.fro.at/671914" target="_blank">Sendung zum Nachhören auf der CBA-Plattform</a></p>
         <p><span class="datum">03.07.2024:</span><br>Mit Gareth Gates, Leah McFall, Debbie Harry und Beck<br><a
             href="https://helsinki.at/program/130414" target="_blank">Programmhinweis auf der Radio Helsinki Homepage</a><br><a
             href="https://cba.fro.at/668872" target="_blank">Sendung zum Nachhören auf der CBA-Plattform</a></p>
