--- a/20112024/index.html
+++ b/20112024/index.html
@@ -35,6 +35,8 @@
       <h2 class="announcement-font">Jubiläumsausgabe: 20.11.2024 18:00 Uhr</h2>
     </div>
     <h3 class="announcement-2 announcement-font">5 Jahre Happy Birthday Show</h3>
+    <iframe src="https://cba.fro.at/685763/embed?&waveform=false" width="100%" height="99"
+      style="border:none; width:100%; height:79px; margin-bottom: 10px;"></iframe>
     <p>Obwohl man es kaum glauben mag, aber die erste Happy Birthday Show ist mittlerweile fünf Jahre her. Das feiern
       wir mit einer ganz speziellen Jubiläumsausgabe. Ausnahmsweise gibt es keine Musikerinnen und Musiker, die
       Geburtstag haben. Stattdessen geht es zuerst um die Geschichte und die Entstehung der Happy Birthday Show und
@@ -44,8 +46,7 @@
       geht.</p>
     <p><a href="https://helsinki.at/program/130419" target="_blank">Programmhinweis auf der Radio Helsinki Homepage</a>
     </p>
-    <p>Sie können die Jubiläumsausgabe am 20.11.2024 von 18 bis 19 Uhr in Graz auf der Frequenz 92,6 oder im <a
-      href="https://live.helsinki.at" target="_blank">Radio Helsinki Livestream</a> hören.</p>
+    <p><a href="https://cba.fro.at/685763" target="_blank">Sendung zum Nachhören auf der CBA-Plattform</a></p>
   </div>
 
   <script src="styles/jquery-3.4.1.slim.min.js"
