--- a/index.html
+++ b/index.html
@@ -69,6 +69,8 @@
       <h2 class="announcement-font">Jubiläumsausgabe: 20.11.2024 18:00 Uhr</h2>
     </div>
     <h3 class="announcement-2 announcement-font">5 Jahre Happy Birthday Show</h3>
+    <iframe src="https://cba.fro.at/685763/embed?&waveform=false" width="100%" height="99"
+      style="border:none; width:100%; height:79px; margin-top: 10px; margin-bottom: 15px;"></iframe>
     <p>Obwohl man es kaum glauben mag, aber die erste Happy Birthday Show ist mittlerweile fünf Jahre her. Deshalb gibt
       es am 20. November die 5-Jahres-Jubiläumsausgabe, mit einem ganz speziellen Programm. Mehr Infos zur Jubiläumsausgabe
       gibt es <a href="https://happybirthdayshowhelsinki.github.io/20112024">hier</a>.</p>
