--- a/vergangenesendungen/index.html
+++ b/vergangenesendungen/index.html
@@ -30,10 +30,13 @@
         <h1>Happy Birthday Show</h1>
         <div w3-include-html="https://happybirthdayshowhelsinki.github.io/standard.html"></div>
         <h2>Vergangene Sendungen</h2>
+        <p><a href="https://happybirthdayshowhelsinki.github.io/18122024">18.12.2024</a></p>
         <p><a href="https://happybirthdayshowhelsinki.github.io/20112024">20.11.2024</a></p>
         <p><a href="https://happybirthdayshowhelsinki.github.io/23102024">23.10.2024</a></p>
-        <p><a href="https://happybirthdayshowhelsinki.github.io/25092024">25.09.2024</a></p>
         <h3 class="jahr">2024</h3>
+        <p><span class="datum">25.09.2024:</span><br>Mit Bruce Springsteen, Zendaya, Mark Ronson und Gloria Estefan<br><a
+            href="https://helsinki.at/program/130417" target="_blank">Programmhinweis auf der Radio Helsinki Homepage</a><br><a
+            href="https://cba.fro.at/675268" target="_blank">Sendung zum Nachhören auf der CBA-Plattform</a></p>
         <p><span class="datum">28.08.2024:</span><br>Mit Shania Twain, Patrick Nuo, Annalisa und Jendrik<br><a
             href="https://helsinki.at/program/130416" target="_blank">Programmhinweis auf der Radio Helsinki Homepage</a><br><a
             href="https://cba.fro.at/674291" target="_blank">Sendung zum Nachhören auf der CBA-Plattform</a></p>
