--- a/15012025/index.html
+++ b/15012025/index.html
@@ -34,7 +34,9 @@
       href="https://live.helsinki.at" target="_blank">Radio Helsinki Livestream</a> hören.</p>
     <p><a href="https://helsinki.at/program/138217" target="_blank">Programmhinweis auf der Radio Helsinki Homepage</a>
     </p>
-    <p>Der Inhalt dieser Sendung wurde noch nicht bekannt gegeben. Bitte noch um ein wenig Geduld... &#128521;</p>
+    <p>Heute feiern wir mit Aloe Blacc, Jamelia, Ti&#235;sto und Pixie Lott. Der bekannte Komiker und Schauspieler Rowan
+      Atkinson hatte am 6. Jänner Geburtstag, er wurde als Mr. Bean bekannt. Außerdem ist am 28. Jänner der europäische
+      Datenschutztag.</p>
   </div>
 
   <script src="styles/jquery-3.4.1.slim.min.js"
