--- a/12032025/index.html
+++ b/12032025/index.html
@@ -34,7 +34,9 @@
       href="https://live.helsinki.at" target="_blank">Radio Helsinki Livestream</a> hören.</p>
     <p><a href="https://helsinki.at/program/138219" target="_blank">Programmhinweis auf der Radio Helsinki Homepage</a>
     </p>
-    <p>Der Inhalt dieser Sendung wurde noch nicht bekannt gegeben. Bitte noch um ein wenig Geduld... &#128521;</p>
+    <p>Heute feiern wir mit Justin Bieber, Mariah Carey, Chris Rea und Stefanie Heinzmann. Am 10. März war der
+      internationale Dudelsack-Tag. Außerdem hat am 26. März der ehemalige deutsche Skirennläufer Felix Neureuther
+      Geburtstag.</p>
   </div>
 
   <script src="styles/jquery-3.4.1.slim.min.js"
