--- a/04062025/index.html
+++ b/04062025/index.html
@@ -34,7 +34,9 @@
       href="https://live.helsinki.at" target="_blank">Radio Helsinki Livestream</a> hören.</p>
     <p><a href="https://helsinki.at/program/138222" target="_blank">Programmhinweis auf der Radio Helsinki Homepage</a>
     </p>
-    <p>Der Inhalt dieser Sendung wurde noch nicht bekannt gegeben. Bitte noch um ein wenig Geduld... &#128521;</p>
+    <p>Heute feiern wir mit Campino von den Toten Hosen, Justin Jesso, Alanis Morissette und KT Tunstall. Der
+      Schauspieler Louis Hoffmann hatte am 3. Juni Geburtstag. Außerdem ist der 6. Juni der Nationalfeiertag von
+      Schweden.</p>
   </div>
 
   <script src="styles/jquery-3.4.1.slim.min.js"
