--- a/vergangenesendungen/index.html
+++ b/vergangenesendungen/index.html
@@ -30,10 +30,13 @@
         <h1>Happy Birthday Show</h1>
         <div w3-include-html="https://happybirthdayshowhelsinki.github.io/standard.html"></div>
         <h2>Vergangene Sendungen</h2>
+        <p><a href="https://happybirthdayshowhelsinki.github.io/04062025">04.06.2025</a></p>
         <p><a href="https://happybirthdayshowhelsinki.github.io/07052025">07.05.2025</a></p>
         <p><a href="https://happybirthdayshowhelsinki.github.io/09042025">09.04.2025</a></p>
-        <p><a href="https://happybirthdayshowhelsinki.github.io/12032025">12.03.2025</a></p>
         <h3 class="jahr">2025</h3>
+        <p><span class="datum">12.03.2025:</span><br>Mit Justin Bieber, Mariah Carey, Chris Rea und Stefanie Heinzmann<br><a
+            href="https://helsinki.at/program/138219" target="_blank">Programmhinweis auf der Radio Helsinki Homepage</a><br><a
+            href="https://cba.fro.at/700570" target="_blank">Sendung zum Nachhören auf der CBA-Plattform</a></p>
         <p><span class="datum">12.02.2025:</span><br>Wiederholung vom 15.02.2023: Mit Axl Rose, Emma Roberts, James Blunt und
             Sasha Pieterse<br><a href="https://helsinki.at/program/138218" target="_blank">Programmhinweis auf der Radio Helsinki
             Homepage</a><br><a href="https://cba.fro.at/609351" target="_blank">Sendung zum Nachhören auf der
