--- a/02072025/index.html
+++ b/02072025/index.html
@@ -34,7 +34,10 @@
       href="https://live.helsinki.at" target="_blank">Radio Helsinki Livestream</a> hören.</p>
     <p><a href="https://helsinki.at/program/138223" target="_blank">Programmhinweis auf der Radio Helsinki Homepage</a>
     </p>
-    <p>Der Inhalt dieser Sendung wurde noch nicht bekannt gegeben. Bitte noch um ein wenig Geduld... &#128521;</p>
+    <p>Heute gibt es eine Wiederholung der Sendung vom 06.07.2022.</p>
+    <p>"Heute feiern wir mit Jennifer Lopez, DJ Lumix, Luke Hemmings von 5 Seconds Of Summer und Carolin Niemczyk von
+      Glasperlenspiel. Am 4. Juli war der Unabhängigkeitstag in den USA. Außerdem hat der englische Fußballspieler Harry
+      Kane am 28. Juli Geburtstag."</p>
   </div>
 
   <script src="styles/jquery-3.4.1.slim.min.js"
